<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.danthe1st</groupId>
	<artifactId>https-intercept</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<native-plugin-version>0.10.1</native-plugin-version>
		<slf4j-version>2.0.12</slf4j-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<logback.version>1.5.14</logback.version>
		<checkerframework.version>3.42.0</checkerframework.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.1.107.Final</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>1.78.1</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.17.2</version>
		</dependency>
		<dependency>
	      <groupId>org.checkerframework</groupId>
	      <artifactId>checker-qual</artifactId>
	      <version>${checkerframework.version}</version>
	      <scope>provided</scope>
	    </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>21</release>
					<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
		            <annotationProcessorPaths>
			            <path>
				            <groupId>org.checkerframework</groupId>
				            <artifactId>checker</artifactId>
				            <version>${checkerframework.version}</version>
			            </path>
		            </annotationProcessorPaths>
		            <annotationProcessors>
		              <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
		            </annotationProcessors>
					<compilerArgs>
		                <arg>-J-XX:+AutoCreateSharedArchive</arg>
						<arg>-J-XX:SharedArchiveFile=.classes.jsa</arg>
						<arg>-Xmaxerrs</arg>
		                <arg>10000</arg>
		                <arg>-Xmaxwarns</arg>
		                <arg>10000</arg>
	                	<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
		                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
		                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
	            	</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>
								io.github.danthe1st.httpsintercept.HttpsIntercept</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>native</id>
			<dependencies>
				<dependency>
					<groupId>org.graalvm.buildtools</groupId>
					<artifactId>graalvm-reachability-metadata</artifactId>
					<version>${native-plugin-version}</version>
					<classifier>repository</classifier>
					<type>zip</type>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>${native-plugin-version}</version>
						<extensions>true</extensions>
						<configuration>
							<buildArgs combine.self="merge" combine.children="append">
								<buildArg>-O3</buildArg>
								<buildArg>--gc=G1</buildArg>
								<buildArg>--strict-image-heap</buildArg>
								<buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
								<buildArg>-H:ResourceConfigurationFiles=graal/resource-config.json</buildArg>
								<buildArg>-H:ReflectionConfigurationFiles=graal/reflect-config.json</buildArg>
							</buildArgs>
						</configuration>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>nativeExtraArgs</id>
			<activation>
				<property>
					<name>native.extraArgs</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>${native-plugin-version}</version>
						<configuration>
							<buildArgs combine.self="merge"
								combine.children="append">
								<buildArg>${native.extraArgs}</buildArg>
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
